10/12/10 removed unused code from ModelViewTransform
10/12/10 migrate GridPanel to phetcommon, deprecate EasyGridBagLayout
10/12/10 add support for relative anchors to GridPanel, doc where to add Java 1.6 baseline anchors
10/12/10 migrate FadeOutActivity to piccolo-phet
10/12/10 decided to keep unused IPlateChargeGridSizeStrategies for historical purposes, noted in javadoc
10/12/10 decided not to factor out duplicate code in drag handles, doing so would obfuscate
10/12/10 tweak drag handle nodes to use less space
10/12/10 clean up drag handlers, doc and clearer variable names
10/11/10 refine how IntroductionModule subclasses DieletricModule 
10/11/10 specify explicit default values for ranges in CLConstants
10/7/10 enable Electric Field Detector check box (again) for feature development
# 0.00.32 (44871) Oct 7, 2010
10/7/10 development version to share with KSU
10/7/10 instead of using dielectric=air in Introduction tab, use custom dielectric with a huge offset 
10/7/10 disable Electric Field Detector check box (again)
10/7/10 rotate field probe
10/7/10 enable Electric Field Detector check box (again) for feature development
# 0.00.31 (44860) Oct 7, 2010
10/7/10 development version to share with KSU
10/7/10 fix: custom dielectric constant not reset by Reset All
10/7/10 gray out Voltmeter and Electric Field Detector check boxes, since they are not yet implemented
10/7/10 default custom dielectric constant to 5
10/7/10 default dielectric charge view to "all"
10/7/10 default Plate Charge view to "on", as specified in the design doc
10/7/10 default dielectric offset to just outside the capacitor, as specified in the design doc
10/7/10 fix: reverse polarity of charges on the dielectric
10/7/10 create body of field detector
10/7/10 adjust origin of field detector probe to be at center of crosshairs
10/7/10 enable Electric Field Detector check box for feature development
# 0.00.30 (44840) Oct 7, 2010
10/7/10 development version to share with KSU